--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,7 @@
       "extends": [
         "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/template/process-inline-templates",
-        "plugin:@typescriptt--eslint/recommended",
+        "plugin:@typescript-eslint/recommended",
         "plugin:prettier/recommended"
       ],
       "plugins": ["prettier", "@typescript-eslint"],
@@ -39,7 +39,7 @@
             "style": "kebab-case"
           }
         ],
-        "prettier/prettier": ["error"]
+        "prettier/prettier": "error"
       }
     },
     {
@@ -52,7 +52,7 @@
       ],
       "plugins": ["prettier"],
       "rules": {
-        "prettier/prettier": ["error"]
+        "prettier/prettier": "error"
       }
     }
   ]
